--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 secretfile filter=git-crypt diff=git-crypt
 *.key filter=git-crypt diff=git-crypt
 secretdir/** filter=git-crypt diff=git-crypt
-*.txt
+*.txt filter=git-crypt diff=git-crypt
