--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ secretfile filter=git-crypt diff=git-crypt
 *.key filter=git-crypt diff=git-crypt
 secretdir/** filter=git-crypt diff=git-crypt
 *.txt filter=git-crypt diff=git-crypt
+*.pdf filter=git-crypt diff=git-crypt
