--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-secretfile filter=git-crypt diff=git-crypt
-*.key filter=git-crypt diff=git-crypt
-secretdir/** filter=git-crypt diff=git-crypt
-*.txt filter=git-crypt diff=git-crypt
-*.pdf filter=git-crypt diff=git-crypt
+/** filter=git-crypt diff=git-crypt
+/public/** !filter !diff
+.git* !filter !diff
